--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Web Application/API development that scales.</p>
-                <p>Frontend Solutions with JavaScript/TypeScript, React, SCSS, Material UI, and more.</p>
-                <p>API/Microservice Development with Go and Node.js + Express.</p>
+                <p>Frontend Solutions with JavaScript/TypeScript, React, Next.js, and more.</p>
+                <p>API/Microservice Development with Go and Node.js.</p>
                 <br>
             </div>
           </div>
@@ -81,7 +81,37 @@
 
           <div class="row jb-content">
             <div class="col-sm-8 offset-sm-2">
-              <p>My name is Jess Brisson, I'm an experienced Web Applications and API Developer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and services/API's for many business needs.</p>
+              <p>My name is Jess Brisson, I'm an experienced Software Engineer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and micro-services/API's for many business needs.</p>
+              <p>The technologies I use include but aren't limited to:</p>
+              <ul>
+                <li>Go(lang):</li>
+                <li>
+                  <ul>
+                    <li>REST API development with Servemux, Fiber, or Gin</li>
+                    <li>RPC/streaming with gRPC</li>
+                  </ul>
+                </li>
+                <li>Node.js</li>
+                <li>
+                  <ul>
+                    <li>REST API development with Express</li>
+                    <li>RPC/streaming with gRPC or WebSockets</li>
+                  </ul>
+                </li>
+                <li>AWS</li>
+                <li>
+                  <ul>
+                    <li>Elasticache</li>
+                    <li>SQS</li>
+                    <li>MSK</li>
+                    <li>RDS and DynamoDB</li>
+                  </ul>
+                </li>
+                <ul></ul>
+                <li>Next.js</li>
+                <li>React</li>
+                <li>Terraform/Docker/EKS</li>
+              </ul>
             </div>
           </div>
 
@@ -99,12 +129,12 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with JavaScript(TypeScript + React), HTML(JSX), CSS(SCSS, Material UI)</h3>
+                <h3>Frontend Development with React and Next.js</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Backend MVC and API development with Go, and Node.js(Express)</h3>
+                <h3>Backend REST API, and gRPC development with Go or Node.js</h3>
               </div>
             </div>
             <div class="col-lg-4">
