--- a/index.html
+++ b/index.html
@@ -83,35 +83,18 @@
             <div class="col-sm-8 offset-sm-2">
               <p>My name is Jess Brisson, I'm an experienced Software Engineer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and micro-services/API's for many business needs.</p>
               <p>The technologies I use include but aren't limited to:</p>
-              <ul>
-                <li>Go(lang):</li>
-                <li>
-                  <ul>
-                    <li>REST API development with Servemux, Fiber, or Gin</li>
-                    <li>RPC/streaming with gRPC</li>
-                  </ul>
-                </li>
-                <li>Node.js</li>
-                <li>
-                  <ul>
-                    <li>REST API development with Express</li>
-                    <li>RPC/streaming with gRPC or WebSockets</li>
-                  </ul>
-                </li>
-                <li>AWS</li>
-                <li>
-                  <ul>
-                    <li>Elasticache</li>
-                    <li>SQS</li>
-                    <li>MSK</li>
-                    <li>RDS and DynamoDB</li>
-                  </ul>
-                </li>
-                <ul></ul>
-                <li>Next.js</li>
-                <li>React</li>
-                <li>Terraform/Docker/EKS</li>
-              </ul>
+              <p>Go(lang):<br/>
+                <span> - </span>REST API development with Servemux, Fiber, or Gin<br/>
+                <span> - </span>RPC/streaming with gRPC
+              </p>
+              <p>Node.js:<br/>
+                <span> - </span>REST API development with Express<br/>
+                <span> - </span>RPC/streaming with gRPC or WebSockets
+              </p>
+              <p>AWS:<br/>
+                <span> - </span>Elasticache - SQS - MSK - RDS and DynamoDB
+              </p>
+              <p>Next.js<span> - </span>React<span> - </span>Terraform/Docker/EKS</p>
             </div>
           </div>
 
