--- a/index.html
+++ b/index.html
@@ -84,17 +84,21 @@
               <p>My name is Jess Brisson, I'm an experienced Software Engineer with many facets. Since 2015 I've made and maintained various websites, custom web applications, and micro-services/API's for many business needs.</p>
               <p>The technologies I use include but aren't limited to:</p>
               <p>Go(lang):<br/>
-                <span> - </span>REST API development with Servemux, Fiber, or Gin<br/>
-                <span> - </span>RPC/streaming with gRPC
+                REST API development with Servemux, Fiber, or Gin<br/>
+                RPC/streaming with gRPC
               </p>
               <p>Node.js:<br/>
-                <span> - </span>REST API development with Express<br/>
-                <span> - </span>RPC/streaming with gRPC or WebSockets
+                REST API development with Express<br/>
+                RPC/streaming with gRPC or WebSockets
               </p>
-              <p>AWS:<br/>
-                <span> - </span>Elasticache - SQS - MSK - RDS and DynamoDB
+              <p>Infrastructure:<br/>
+                AWS: Elasticache - SQS - MSK - RDS - DynamoDB - EKS<br/>
+                Terraform<br/>
+                Docker
               </p>
-              <p>Next.js<span> - </span>React<span> - </span>Terraform/Docker/EKS</p>
+              <p>Frontend:<br/>
+                Next.js - React - Mui or Tailwind
+              </p>
             </div>
           </div>
 
