--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | Web Applications/API Developer </title>
+    <title>Jess Brisson | Software Engineer </title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -61,9 +61,9 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">Web Application/API development that scales.</p>
-                <p>Frontend Solutions with JavaScript/TypeScript, React, Next.js, and more.</p>
-                <p>API/Microservice Development with Go and Node.js.</p>
+                <p class="h4">Software Engineering that scales.</p>
+                <p>Scalable Service/Streaming Development with Go or Node.js</p>
+                <p>Responsive Frontend Development with Next.js or React</p>
                 <br>
             </div>
           </div>
@@ -92,9 +92,7 @@
                 RPC/streaming with gRPC or WebSockets
               </p>
               <p>Infrastructure:<br/>
-                AWS: Elasticache - SQS - MSK - RDS - DynamoDB - EKS<br/>
-                Terraform<br/>
-                Docker
+                AWS(Elasticache - SQS - MSK - RDS - DynamoDB - EKS) - Terraform - Docker
               </p>
               <p>Frontend:<br/>
                 Next.js - React - Mui or Tailwind
@@ -116,17 +114,17 @@
           <div class="row jb-content">
             <div class="col-lg-4">
               <div>
-                <h3>Frontend Development with React and Next.js</h3>
-              </div>
-            </div>
-            <div class="col-lg-4">
-              <div>
                 <h3>Backend REST API, and gRPC development with Go or Node.js</h3>
               </div>
             </div>
             <div class="col-lg-4">
               <div>
-                <h3>Microservices, Relational Database Development, App Maintenance, Third Party Integration</h3>
+                <h3>Frontend Development with React and Next.js</h3>
+              </div>
+            </div>
+            <div class="col-lg-4">
+              <div>
+                <h3>Infrastructure, DB Design, Legacy App Maintenance, Third Party Integration</h3>
               </div>
             </div>
           </div>
@@ -157,7 +155,6 @@
       <footer class="mastfoot mt-auto">
         <div class="row">
           <div class="col">
-            <p><small>This site was created with modern(ES6) JavaScript and Vue.js. If you are experiencing issues please view in an upgraded browser.</small></p>
             <p><small><span class="jb-date">{{ theYear }}</span> | Jess Brisson</small></p>
           </div>
         </div>
