--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="author" content="">
     <link rel="icon" href="/favicon.ico">
 
-    <title>Jess Brisson | Software Engineer </title>
+    <title>Jess Brisson | Software Engineer</title>
 
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400" rel="stylesheet">
 
@@ -62,8 +62,8 @@
           <div class="row jb-content">
             <div class="col-sm-12">
                 <p class="h4">Software Engineering that scales.</p>
-                <p>Scalable Service/Streaming Development with Go or Node.js</p>
-                <p>Responsive Frontend Development with Next.js or React</p>
+                <p>Scalable REST API and gRPC Development with Go and Node.js</p>
+                <p>Responsive Frontend Development with Next.js and React</p>
                 <br>
             </div>
           </div>
