--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
                 RPC/streaming with gRPC or WebSockets
               </p>
               <p>Infrastructure:<br/>
-                AWS(Elasticache - SQS - MSK - RDS - DynamoDB - EKS) - Terraform - Docker
+                AWS(Elasticache - SQS - MSK - Aurora - DynamoDB - EKS - S3) - Terraform - Docker
               </p>
               <p>Frontend:<br/>
                 Next.js - React - Mui or Tailwind
