--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
           <div class="row jb-content">
             <div class="col-sm-12">
-                <p class="h4">Software Engineering that scales.</p>
+                <p class="h4">Software engineering that scales</p>
                 <p>Scalable REST API and gRPC Development with Go and Node.js</p>
                 <p>Responsive Frontend Development with Next.js and React</p>
                 <br>
