--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
                 AWS(Elasticache - SQS - MSK - Aurora - DynamoDB - EKS - S3) - Terraform - Docker
               </p>
               <p>Frontend:<br/>
-                Next.js - React - Mui or Tailwind
+                Next.js - React - MUI or Tailwind
               </p>
             </div>
           </div>
